# fc-trace

./: .gitignore  AUTHORS.md  AVAILABILITY.md  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/ground_truth/: README.md  S1_normal_workload_gt.json  S2_crash_before_commit_gt.json  S3_antiforensic_burst_gt.json  S4_shortlived_files_gt.json  S5_deep_rename_tree_gt.json
data/raw_images/: README.md  SHA256SUMS.txt
results/: evaluation.json  evaluation_realmode.json
scripts/: generate_dataset.py  run_real_image_tests.py  score_results.py
src/fctrace/: cli.py
src/fctrace/compare/: baseline_ext4.py  diff_engine.py
src/fctrace/io/: image_reader.py  journal_reader.py
src/fctrace/output/: reporters.py
src/fctrace/parser/: fc_tags.py  tlv_decoder.py
src/fctrace/reconstruct/: event_builder.py
tests/: test_fctrace.py
